--- a/rtmath/rtmath-apps/absorb-slab/absorb-slab.vcxproj
+++ b/rtmath/rtmath-apps/absorb-slab/absorb-slab.vcxproj
@@ -47,6 +47,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
+      <DisableSpecificWarnings>4996;4800</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
