--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -22,10 +22,10 @@
     <ClInclude Include="rtmath\absorb.h" />
     <ClInclude Include="rtmath\atmos.h" />
     <ClInclude Include="rtmath\atmoslayer.h" />
-    <ClInclude Include="rtmath\cdf-ddscat.h" />
     <ClInclude Include="rtmath\command.h" />
     <ClInclude Include="rtmath\common_templates.h" />
     <ClInclude Include="rtmath\config.h" />
+    <ClInclude Include="rtmath\coords.h" />
     <ClInclude Include="rtmath\da\daDiagonalMatrix.h" />
     <ClInclude Include="rtmath\da\daInitLayer.h" />
     <ClInclude Include="rtmath\da\daLayer.h" />
@@ -34,14 +34,21 @@
     <ClInclude Include="rtmath\da\damatrix_quad.h" />
     <ClInclude Include="rtmath\da\daPf.h" />
     <ClInclude Include="rtmath\da\daStatic.h" />
-    <ClInclude Include="rtmath\ddscat.h" />
-    <ClInclude Include="rtmath\ddweights.h" />
+    <ClInclude Include="rtmath\ddscat\cdf-ddscat.h" />
+    <ClInclude Include="rtmath\ddscat\ddLoader.h" />
+    <ClInclude Include="rtmath\ddscat\ddOutput.h" />
+    <ClInclude Include="rtmath\ddscat\ddOutputEnsemble.h" />
+    <ClInclude Include="rtmath\ddscat\ddOutputSingle.h" />
+    <ClInclude Include="rtmath\ddscat\ddscat.h" />
+    <ClInclude Include="rtmath\ddscat\ddScattMatrix.h" />
+    <ClInclude Include="rtmath\ddscat\ddweights.h" />
     <ClInclude Include="rtmath\defs.h" />
     <ClInclude Include="rtmath\enums.h" />
     <ClInclude Include="rtmath\error\debug.h" />
     <ClInclude Include="rtmath\error\debug_mem.h" />
     <ClInclude Include="rtmath\error\debug_mem_class.h" />
     <ClInclude Include="rtmath\error\error.h" />
+    <ClInclude Include="rtmath\interpolatable.h" />
     <ClInclude Include="rtmath\lbl.h" />
     <ClInclude Include="rtmath\macros.h" />
     <ClInclude Include="rtmath\mapid.h" />
@@ -71,6 +78,7 @@
     <ClInclude Include="rtmath\rayleigh\Scalc-Rayleigh.h" />
     <ClInclude Include="rtmath\refract.h" />
     <ClInclude Include="rtmath\resource.h" />
+    <ClInclude Include="rtmath\ROOTlink.h" />
     <ClInclude Include="rtmath\rtmath.h" />
     <ClInclude Include="rtmath\Stdafx.h" />
     <ClInclude Include="rtmath\units.h" />
@@ -94,6 +102,7 @@
     <ClCompile Include="src\chebyshev.cpp" />
     <ClCompile Include="src\command.cpp" />
     <ClCompile Include="src\config.cpp" />
+    <ClCompile Include="src\coords.cpp" />
     <ClCompile Include="src\daDiagonalMatrix.cpp" />
     <ClCompile Include="src\daInitLayer.cpp" />
     <ClCompile Include="src\daLayer.cpp" />
@@ -101,13 +110,19 @@
     <ClCompile Include="src\damatrix_quad.cpp" />
     <ClCompile Include="src\daPf.cpp" />
     <ClCompile Include="src\daStatic.cpp" />
+    <ClCompile Include="src\ddLoader.cpp" />
+    <ClCompile Include="src\ddOutput.cpp" />
+    <ClCompile Include="src\ddOutputEnsemble.cpp" />
+    <ClCompile Include="src\ddOutputSingle.cpp" />
     <ClCompile Include="src\ddscat.cpp" />
+    <ClCompile Include="src\ddScattMatrix.cpp" />
     <ClCompile Include="src\ddweights.cpp" />
     <ClCompile Include="src\debug.cpp" />
     <ClCompile Include="src\debug_mem.cpp" />
     <ClCompile Include="src\error.cpp" />
     <ClCompile Include="src\hermite.cpp" />
     <ClCompile Include="src\absorber.cpp" />
+    <ClCompile Include="src\interpolatable.cpp" />
     <ClCompile Include="src\laguerre.cpp" />
     <ClCompile Include="src\lbl.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
@@ -221,7 +236,7 @@
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
       <IntrinsicFunctions>false</IntrinsicFunctions>
       <OpenMPSupport>true</OpenMPSupport>
-      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4996;4217</DisableSpecificWarnings>
       <SmallerTypeCheck>false</SmallerTypeCheck>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <PrecompiledHeaderFile>../rtmath/StdAfx.h</PrecompiledHeaderFile>
